# rust-lang--mdBook

./: CHANGELOG.md  Cargo.toml
.github/workflows/: release-plz.yml
examples/: nop-preprocessor.rs
examples/remove-emphasis/: test.rs
examples/remove-emphasis/mdbook-remove-emphasis/: CHANGELOG.md  Cargo.toml
examples/remove-emphasis/mdbook-remove-emphasis/src/: main.rs
guide/src/for_developers/mdbook-wordcount/src/: main.rs
src/: config.rs  lib.rs  main.rs
src/book/: book.rs  mod.rs
src/cmd/: build.rs  clean.rs  init.rs  serve.rs  test.rs  watch.rs
src/cmd/watch/: native.rs  poller.rs
src/preprocess/: mod.rs
src/renderer/: mod.rs
src/renderer/html_handlebars/: hbs_renderer.rs  mod.rs
src/utils/: fs.rs
tests/: alternative_backends.rs  build_process.rs  custom_preprocessors.rs  init.rs  parse_existing_summary_files.rs  rendered_output.rs  testing.rs
tests/cli/: build.rs  cmd.rs  init.rs
tests/dummy_book/: mod.rs
